public/css/style.css
/* ... */
#fh5co-primary-menu .fh5co-sub-menu .fh5co-sub-menu:before {
  top: 6px;
  left: 100%;
}

#fh5co-primary-menu .fh5co-sub-menu .fh5co-sub-menu:after {
  top: 7px;
  right: 100%;
  border: none !important;
}

.site-header.has-image #primary-menu .sub-menu {
  border-color: #ebebeb;
  -webkit-box-shadow: 0 5px 15px 4px rgba(0, 0, 0, 0.09);
  -moz-box-shadow: 0 5px 15px 4px rgba(0, 0, 0, 0.09);
  -ms-box-shadow: 0 5px 15px 4px rgba(0, 0, 0, 0.09);
  -o-box-shadow: 0 5px 15px 4px rgba(0, 0, 0, 0.09);
  box-shadow: 0 5px 15px 4px rgba(0, 0, 0, 0.09);
}
.site-header.has-image #primary-menu .sub-menu:before {
  display: none;
}

#fh5co-primary-menu .fh5co-sub-menu a {
  letter-spacing: 0;
  padding: 0 15px;
  font-size: 18px;
  line-height: 34px;
  color: #575757 !important;
  text-transform: none;
  background: none;
}
#fh5co-primary-menu .fh5co-sub-menu a:hover {
  color: #ff5722 !important;
}

#fh5co-work-section,
#fh5co-services-section,
#fh5co-content-section,
#fh5co-work-section_2,
#fh5co-blog-section,
#fh5co-features {
  padding: 10em 0;
}
@media screen and (max-width: 768px) {
  #fh5co-work-section,
  #fh5co-services-section,
  #fh5co-content-section,
  #fh5co-work-section_2,
  #fh5co-blog-section,
  #fh5co-features {
    padding: 4em 0;
  }
}

.fh5co-section-gray {
  background: rgba(0, 0, 0, 0.04);
}

.heading-section {
  padding-bottom: 1em;
  margin-bottom: 5em;
}
.heading-section:after {
  position: absolute;
  content: '';
  bottom: 0;
  left: 50%;
  width: 100px;
  margin-left: -50px;
  height: 2px;
  background: #ff5722;
}
.heading-section h3 {
  font-size: 40px;
  font-weight: 300;
  position: relative;
}
.heading-section p {
  font-size: 20px;
}

.feature-text h3 {
  text-transform: uppercase;
  font-size: 14px;
  margin-bottom: 10px;
  font-weight: 700;
  color: #000;
  letter-spacing: .2em;
}
.feature-text h3 .number {
  margin-right: 5px;
  color: #ff5722;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
}
.feature-text p {
  font-size: 16px;
}

.services {
  background: #ff5722;
  background: #fff;
  padding: 40px 20px 20px 20px;
  margin-bottom: 30px;
  border: 1px solid rgba(0, 0, 0, 0.18);
  -webkit-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}
.services:hover, .services:focus, .services:active {
  -webkit-box-shadow: 0px 10px 20px -12px rgba(0, 0, 0, 0.18);
  -moz-box-shadow: 0px 10px 20px -12px rgba(0, 0, 0, 0.18);
  box-shadow: 0px 10px 20px -12px rgba(0, 0, 0, 0.18);
}
.services span {
  margin-bottom: 30px;
  display: block;
  width: 100%;
}
.services span i {
  font-size: 40px;
  color: #ff5722 !important;
}
.services h3 {
  font-size: 20px;
  font-weight: 400;
  color: #ff5722;
}
.services p {
  font-size: 16px;
  color: gray;
}

.feature-left {
  float: left;
  width: 100%;
  margin-bottom: 30px;
  position: relative;
}
.feature-left .icon {
  float: left;
  text-align: center;
  width: 15%;
}
@media screen and (max-width: 992px) {
  .feature-left .icon {
    width: 10%;
  }
}
@media screen and (max-width: 768px) {
  .feature-left .icon {
    width: 15%;
  }
}
.feature-left .icon i {
  display: table-cell;
  vertical-align: middle;
  font-size: 40px;
  color: #ff5722;
}
.feature-left .feature-copy {
  float: right;
  width: 80%;
}
@media screen and (max-width: 992px) {
  .feature-left .feature-copy {
    width: 90%;
  }
}
@media screen and (max-width: 768px) {
  .feature-left .feature-copy {
    width: 85%;
  }
}
@media screen and (max-width: 480px) {
  .feature-left .feature-copy {
    width: 80%;
  }
}
.feature-left .feature-copy h3 {
  font-size: 18px;
  color: #1a1a1a;
  margin-bottom: 10px;
}
.feature-left .feature-copy p {
  font-size: 16px;
  line-height: 1.8;
}

#fh5co-portfolio {
  padding: 7em 0;
  min-height: 500px;
}
@media screen and (max-width: 768px) {
  #fh5co-portfolio {
    padding: 3em 0;
  }
}

#fh5co-portfolio-list {
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -moz-flex-wrap: wrap;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  position: relative;
  float: left;
  padding: 0;
  margin: 0;
  width: 100%;
}
#fh5co-portfolio-list li {
  display: block;
  padding: 0;
  margin: 0 0 10px 1%;
  list-style: none;
  min-height: 400px;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  float: left;
  clear: left;
  position: relative;
}
@media screen and (max-width: 480px) {
  #fh5co-portfolio-list li {
    margin-left: 0;
  }
}
#fh5co-portfolio-list li a {
  min-height: 400px;
  padding: 2em;
  position: relative;
  width: 100%;
  display: block;
}
#fh5co-portfolio-list li a:before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: "";
  z-index: 80;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s;
  background: transparent;
}
#fh5co-portfolio-list li a:hover:before {
  background: rgba(0, 0, 0, 0.5);
}
#fh5co-portfolio-list li a .case-studies-summary {
  width: auto;
  bottom: 2em;
  left: 2em;
  right: 2em;
  position: absolute;
  z-index: 100;
}
@media screen and (max-width: 768px) {
  #fh5co-portfolio-list li a .case-studies-summary {
    bottom: 1em;
    left: 1em;
    right: 1em;
  }
}
#fh5co-portfolio-list li a .case-studies-summary span {
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 13px;
  color: rgba(255, 255, 255, 0.7);
}
#fh5co-portfolio-list li a .case-studies-summary h2 {
  color: #fff;
  margin-bottom: 0;
}
@media screen and (max-width: 768px) {
  #fh5co-portfolio-list li a .case-studies-summary h2 {
    font-size: 20px;
  }
}
#fh5co-portfolio-list li.two-third {
  width: 65.6%;
}
@media screen and (max-width: 768px) {
  #fh5co-portfolio-list li.two-third {
    width: 49%;
  }
}
@media screen and (max-width: 480px) {
  #fh5co-portfolio-list li.two-third {
    width: 100%;
  }
}
#fh5co-portfolio-list li.one-third {
  width: 32.3%;
}
/* ... */

